package DAO.factory;

public interface ConnFactory {
    Conn getConnection();

}
