package DAO.factory;

public enum Database {
    JMysql, JSqlite, JFirebase;
}
