package Presentacion.Obeserver;

public interface Observer {
    void update(Tablero tablero);
}
